K8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: avr-go
  namespace: prod
spec:
  selector:
    app: avr-go
  ports:
  - protocol: TCP
    port: 80
    targetPort: 2498
